# trading-bot-platform

./: bot_info.sql  pyproject.toml
backend/: database.py  main.py  models.py
backend/crud/: crud.py
backend/database/: database.py
backend/models/: enums.py  models.py
backend/schemas/: schemas.py
backend/utils/: utils.py
frontend/: package-lock.json  package.json
